security config created

--- a/user-microservice/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/user-microservice/src/main/resources/application.yml
@@ -27,11 +27,6 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: false
 
-
-
-
-
-
 logging:
   level:
     org.springframework.web: debug
@@ -39,3 +34,7 @@ logging:
 eureka:
   client:
     enabled: false
+
+security:
+  username: user
+  password: pass
