--- a/user-microservice/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/user-microservice/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: false
