--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=post_sharing
+
+security.username=user
+security.password=pass
+
