--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.port=8082
 
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=post_sharing
+spring.data.mongodb.database=postdb
 
 security.username=user
 security.password=pass
