docker-compose.yml and application.properties updated

--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+spring.application.name=post-microservice
 server.port=8082
+
+eureka.client.enabled=true
+
 
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
