application.properties updated

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.application.name=api-gateway
+server.port=8083
+
+spring.main.allow-circular-references=true
+
+eureka.client.enabled=false
+
+
+user-microservice.url=http://localhost:8081
+post-microservice.url=http://localhost:8082
+
+security.username=user
+security.password=pass
