jwt implemented to api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,9 +6,23 @@ spring.main.allow-circular-references=true
 
 eureka.client.enabled=false
 
+spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 user-microservice.url=http://localhost:8081
-post-microservice.url=http://localhost:8082
+post-microservice.url=http://192.168.1.75:8082
 
 security.username=user
 security.password=pass
+
+
+jwt-variables.KEY=jwtProject
+jwt-variables.ISSUER=gucardev
+jwt-variables.EXPIRES_ACCESS_TOKEN_MINUTE=15
+jwt-variables.EXPIRES_REFRESH_TOKEN_MINUTE=150000
