--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=post-microservice
 server.port=8082
 
-eureka.client.enabled=true
-
 
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
@@ -11,3 +9,7 @@ spring.data.mongodb.database=postdb
 security.username=user
 security.password=pass
 
+eureka.client.enabled=false
+
+user-microservice.url=http://localhost:8081
+#post-microservice.url=http://192.168.1.75:8082
