docker compose file created for all microservices

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8083
 spring.main.allow-circular-references=true
 
 eureka.client.enabled=false
+#eureka.client.service-url.defaultZone=http://localhost:8084/eureka
 
 spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
