--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -11,5 +11,5 @@ security.password=pass
 
 eureka.client.enabled=false
 
-user-microservice.url=http://localhost:8081
+user-microservice.url=http://192.168.1.75:8081
 #post-microservice.url=http://192.168.1.75:8082
