eureka clients configurated

--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=post-microservice
 server.port=8082
-
-
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=postdb
-
 security.username=user
 security.password=pass
 
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://eureka-server:8084/eureka
 
-user-microservice.url=http://192.168.1.75:8081
+
+#user-microservice.url=http://192.168.1.75:8081
 #post-microservice.url=http://192.168.1.75:8082
