--- a/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
     show-sql: false
 
 
+
 logging:
   level:
     org.springframework.web: debug
@@ -37,3 +38,10 @@ logging:
 security:
   username: user
   password: pass
+
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://eureka-server:8084/eureka
+    enabled: true
