--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,11 +4,10 @@ server.port=8083
 
 spring.main.allow-circular-references=true
 
-eureka.client.enabled=false
-#eureka.client.service-url.defaultZone=http://localhost:8084/eureka
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://eureka-server:8084/eureka
 
 spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
