--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,18 @@
+#
+# Build stage
+#
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package -DskipTests
+
+#
+# Package stage
+#
 FROM openjdk:11
-ARG JAR_FILE=target/api-gateway-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} api-gateway-0.0.1-SNAPSHOT.jar
+COPY --from=build /home/app/target/api-gateway-0.0.1-SNAPSHOT.jar /usr/local/lib/api-gateway.jar
 EXPOSE 8083
-ENTRYPOINT ["java", "-jar" , "api-gateway-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/usr/local/lib/api-gateway.jar"]
+
+
+
