--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,5 +1,18 @@
+#
+# Build stage
+#
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package -DskipTests
+
+#
+# Package stage
+#
 FROM openjdk:11
-ARG JAR_FILE=target/eureka-server-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} eureka-server-0.0.1-SNAPSHOT.jar
+COPY --from=build /home/app/target/eureka-server-0.0.1-SNAPSHOT.jar /usr/local/lib/eureka-server.jar
 EXPOSE 8084
-ENTRYPOINT ["java", "-jar" , "eureka-server-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/usr/local/lib/eureka-server.jar"]
+
+
+
