--- a/post-microservice/Dockerfile
+++ b/post-microservice/Dockerfile
@@ -1,5 +1,18 @@
+#
+# Build stage
+#
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package -DskipTests
+
+#
+# Package stage
+#
 FROM openjdk:11
-ARG JAR_FILE=target/post-microservice-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} post-microservice-0.0.1-SNAPSHOT.jar
+COPY --from=build /home/app/target/post-microservice-0.0.1-SNAPSHOT.jar /usr/local/lib/post-microservice.jar
 EXPOSE 8082
-ENTRYPOINT ["java", "-jar" , "post-microservice-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/usr/local/lib/post-microservice.jar"]
+
+
+
