--- a/notification-microservice/src/main/resources/application.properties
+++ b/notification-microservice/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.application.name=notification-microservice
+server.port=8086
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=postdb
+
+security.username=user
+security.password=pass
+
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://eureka-server:8084/eureka
+
