--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -60,7 +60,10 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 
 	<dependency>
                 <groupId>org.springframework.boot</groupId>
