--- a/post-microservice/src/main/resources/application.properties
+++ b/post-microservice/src/main/resources/application.properties
@@ -10,5 +10,9 @@ eureka.client.enabled=true
 eureka.client.service-url.defaultZone=http://eureka-server:8084/eureka
 
 
+spring.cache.type=redis
+spring.cache.port=6379
+spring.redis.host=redisdb
+
 #user-microservice.url=http://192.168.1.75:8081
 #post-microservice.url=http://192.168.1.75:8082
